# cadpractice

./: CMakeLists.txt  README.md  main.cpp  parser.cpp  parsr.hpp  transaction.cpp  transaction.hpp
D_Testcase(20250725）/20250725_ICCAD_Problem4_Testcase/: pulpino_public_testcase1.txt  pulpino_public_testcase1.vcd  pulpino_public_testcase2.txt  pulpino_public_testcase2.vcd  pulpino_public_testcase3.txt  pulpino_public_testcase3.vcd  pulpino_public_testcase4.txt  pulpino_public_testcase4.vcd  pulpino_public_testcase5.txt  pulpino_public_testcase5.vcd
src/: apb_analyzer.cpp  apb_analyzer.hpp  apb_types.hpp  completer_info.hpp  error_logger.cpp  error_logger.hpp  main.cpp  report_generator.cpp  report_generator.hpp  signal_manager.cpp  signal_manager.hpp  signal_table.cpp  signal_table.hpp  statistics.cpp  statistics.hpp  transaction.cpp  vcd_parser.cpp  vcd_parser.hpp
testcase/: .OOR.vcd.swp  AddressCorruption.txt  AddressCorruption.vcd  AddressMirroring.txt  AddressMirroring.vcd  DataCorruption.txt  DataCorruption.vcd  OOR.txt  OOR.vcd  ReadWriteOverlap.txt  ReadWriteOverlap.vcd  Timeout.txt  Timeout.vcd.txt  error_test.txt  error_test.vcd  mini_test.vcd.txt  pulpino_testcase1.txt  pulpino_testcase2.txt  pulpino_testcase2.vcd  pulpino_testcase3.txt  pulpino_testcase3.vcd.txt  pulpino_testcase4.txt  pulpino_testcase4.vcd  pulpino_testcase5.txt  pulpino_testcase5.vcd.txt  test_timeout.txt  test_timeout.vcd
testcase1/: test1.txt
